--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,6 @@
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-CONFIG_ZMK_KEYBOARD_NAME="Corne"
+CONFIG_ZMK_KEYBOARD_NAME="afyq's corne"
 
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
