feat: add mouse config

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,6 +5,7 @@ CONFIG_ZMK_KEYBOARD_NAME="afyq's corne"
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_POINTING=y
 
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=20
