--- a/build.yaml
+++ b/build.yaml
@@ -1,10 +1,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left nice_view_adapter nice_view
-    snippet: studio-rpc-usb-uart
+    shield: corne_left nice_view_adapter nice_epaper
   - board: nice_nano_v2
-    shield: corne_right nice_view_adapter nice_view
-  - board: nice_nano_v2
-    shield: settings_reset
-
+    shield: corne_right nice_view_adapter nice_epaper
