--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,6 +6,7 @@ CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=20
