--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,6 +7,17 @@ CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_NICE_OLED_GEM_ANIMATION_MS=9600
+
+CONFIG_NICE_OLED_WIDGET_WPM=n
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_LUNA=n
+
+CONFIG_ZMK_SLEEP=y 
+CONFIG_ZMK_IDLE_TIMEOUT=60000
 
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=20
